@startuml
title Daqster Framework Architecture

package "Framework" {
  class QProcessManager {
    +startProcess()
    +stopProcess()
  }
  class ShutdownHandler {
    +requestShutdown()
  }
  class QPluginManager {
    +loadPlugins()
  }
}
package "Application" {
  class ApplicationsManager {
    +initialize()
  }
}
QProcessManager <|-- ApplicationsManager
ShutdownHandler ..> ApplicationsManager : requests shutdown
QPluginManager --> ApplicationsManager : manages plugins
@enduml
skinparam backgroundColor #ffffff
skinparam shadowing false
